DOM Manipulaiton questions started

--- a/JavaScript/Tests/htmlTests/index.html
+++ b/JavaScript/Tests/htmlTests/index.html
@@ -8,5 +8,11 @@
     />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <button id="btn"></button>
+    <script>
+      let elem = document.getElementById("btn");
+      elem.addEventListener("click", ()=>console.log(1), )
+    </script>
+  </body>
 </html>
